--- a/Mid-Term.ipynb
+++ b/Mid-Term.ipynb
@@ -29,11 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Baden-Württemberg', 'Bavaria', 'Berlin', 'Brandenburg', 'Bremen', 'Hamburg', 'Hesse', 'Lower Saxony', 'Mecklenburg-Western Pomerania', 'North Rhine-Westphalia', 'Rhineland-Palatinate', 'Saarland', 'Saxony', 'Saxony-Anhalt', 'Schleswig-Holstein', 'Thuringia']\n"
+     ]
+    }
+   ],
    "source": [
     "########################################\n",
     "## Created on Tue Nov 30 23:40:54 2021##\n",
@@ -44,10 +52,80 @@
     "# MODULES INITIALIZATION\n",
     "# Using Excel table to define the database\n",
     "# Using JSON to save the credentials data\n",
-    "# Ensure that this file is alongside the accompanying folders\n",
+    "#-----------------------------------------\n",
     "import json\n",
     "from openpyxl import load_workbook\n",
+    "from tabulate import tabulate\n",
     "\n",
+    "\n",
+    "######################\n",
+    "## Function Section ##\n",
+    "######################\n",
+    "\n",
+    "\n",
+    "# Json loader\n",
+    "# Load specific key from the stored json data\n",
+    "# Data structure can be seen on the excel file or the relationship-table picture\n",
+    "#-------------------------------------------------------------------------------\n",
+    "def json_loader(target_key, target_file = 'Data.json'):\n",
+    "    \n",
+    "    with open(target_file, 'r') as json_object:\n",
+    "        data_requested = json.loads(json_object.read())[str(target_key)]\n",
+    "    return data_requested\n",
+    "\n",
+    "\n",
+    "# Ask user whether there is a data change(s) and wanted to update the database\n",
+    "#-----------------------------------------------------------------------------\n",
+    "def json_updater():\n",
+    "    target_file = 'Mid-Term Data.xlsx'\n",
+    "    wb = load_workbook(target_file)\n",
+    "\n",
+    "    data = {\n",
+    "        1: {}, # for 'TertEduList'\n",
+    "        2: {}, # for 'TertEduType'\n",
+    "        3: {}, # for 'TertEduProgram'\n",
+    "        4: {}, # for 'LivingCostsByState'\n",
+    "        5: {}  # for 'UniAssist'\n",
+    "    }\n",
+    "\n",
+    "    ##----------------------------------------------------------------------------------------\n",
+    "    ## TO-DO: create a simple checker to ensure the header of the input are all correct\n",
+    "    ##      : simplify the append functions below after the checker has been created with loop\n",
+    "    ##      : take account of column changes in the future when implementing loop function\n",
+    "    ##----------------------------------------------------------------------------------------\n",
+    "    ## Slicing explicitly through the target file to ensure data integrity\n",
+    "    ## Iterating through every data in the sheet \"TertEduList\" and store it to json file\n",
+    "    ## This is return in void function\n",
+    "    ##----------------------------------------------------------------------------------------\n",
+    "\n",
+    "    ws = wb['TertEduList']\n",
+    "    for row in ws.iter_rows(min_row=2, max_col=3):\n",
+    "        data[1][row[0].value] = [row[1].value , row[2].value]\n",
+    "\n",
+    "    # Iterating through every data in the sheet \"TertEduType\" and store it to data\n",
+    "    ws = wb['TertEduType']\n",
+    "    for row in ws.iter_rows(min_row=2, max_col=3):\n",
+    "        data[2][row[0].value] = [row[1].value , row[2].value]\n",
+    "\n",
+    "    # Iterating through every data in the sheet \"TertEduProgram\" and store it to data\n",
+    "    ws = wb['TertEduProgram']\n",
+    "    for row in ws.iter_rows(min_row=2, max_col=4):\n",
+    "        data[3][row[0].value] = [row[1].value , row[2].value, row[3].value]\n",
+    "\n",
+    "    # Iterating through every data in the sheet \"LivingCostsByState\" and store it to data\n",
+    "    ws = wb['LivingCostsByState']\n",
+    "    for row in ws.iter_rows(min_row=2, max_col=6):\n",
+    "        data[4][row[0].value] = [row[1].value , row[2].value, row[3].value, row[4].value, row[5].value]\n",
+    "\n",
+    "    # Iterating through every data in the sheet \"UniAssist\" and store it to data\n",
+    "    ws = wb['UniAssist']\n",
+    "    for row in ws.iter_rows(min_row=2, max_col=3):\n",
+    "        data[5][row[0].value] = [row[1].value , row[2].value]\n",
+    "    \n",
+    "    # Dump the compiled file\n",
+    "    with open(\"Data.json\", \"w\") as json_file:\n",
+    "        json.dump(data, json_file, indent=4)\n",
+    "        \n",
     "\n",
     "# Create user ID for user to store and retrieve their previous search\n",
     "# ID is based on the combination of first letter of full name, place of birth, and pin\n",
@@ -61,13 +139,17 @@
     "    id_comp_2 = POB[0::2]\n",
     "    id_comp_3 = pin\n",
     "    user_id   = (id_comp_1 + id_comp_2 + id_comp_3).upper()\n",
-    "\n",
+    "    \n",
     "    return user_id\n",
     "\n",
     "\n",
+    "#--------------------------------------------------------------------------------------------\n",
+    "# TO-DO: Scalability for the input selection\n",
+    "#      : In case of increasing number of choices from table TertEduType column-C unique value\n",
+    "#--------------------------------------------------------------------------------------------\n",
     "# Ask for user input for the tertiary education type\n",
     "#---------------------------------------------------\n",
-    "def TertiaryType():\n",
+    "def tertiary_type():\n",
     "    while True:\n",
     "        tertiary_edu_type = input (\"Which university type are you looking for: A) Universitäten. B) Fachhochschulen. [A/B]? \")\n",
     "        if tertiary_edu_type in ['A', 'B']:\n",
@@ -80,63 +162,39 @@
     "    return tertiary_edu_type\n",
     "\n",
     "\n",
+    "\n",
     "# Ask for user input for the institution location\n",
     "#------------------------------------------------\n",
-    "def Location():\n",
+    "def location_bundesland():\n",
+    "    bundesland_list = list(json_loader(4).keys())\n",
     "    while True:\n",
-    "        institution_loc = input (\"Which institute type are you looking for: A) Universitäten. B) Fachhochschulen. [A/B]? \")\n",
-    "        if institution_loc in ['A', 'B']:\n",
+    "        institution_loc = input (\"Do you have any location preference? \")\n",
+    "        if institution_loc in bundesland_list:\n",
     "            break\n",
     "        print(\"Your input is incorrect, please try again.\")\n",
-    "    if institution_loc == \"A\": \n",
+    "    if institution_loc == \"A\":\n",
     "        institution_loc = \"Universitäten\"\n",
     "    elif institution_loc == \"B\": \n",
     "        institution_loc = \"Fachhochschulen\"\n",
-    "    return institution_loc\n",
-    "\n",
-    "# Ask user whether there is a change and wanted to update the database\n",
-    "#---------------------------------------------------------------------\n",
-    "\n",
-    "target_file = 'Mid-Term Data.xlsx'\n",
-    "wb = load_workbook(target_file)\n",
-    "\n",
-    "data = {\n",
-    "    1: {}, # for 'TertEduList'\n",
-    "    2: {}, # for 'TertEduType'\n",
-    "    3: {}, # for 'TertEduProgram'\n",
-    "    4: {}, # for 'LivingCostsByState'\n",
-    "    5: {}  # for 'UniAssist'\n",
-    "}\n",
-    "\n",
-    "# TO-DO: create a simple checker to ensure the header of the input are all correct\n",
-    "# Slicing explicitly through the target file to ensure data integrity\n",
-    "# Iterating through every data in the sheet \"TertEduList\" and store it to data\n",
-    "ws = wb['TertEduList']\n",
-    "for row in ws.iter_rows(min_row=2, max_col=3):\n",
-    "    data[1][row[0].value] = [row[1].value , row[2].value]\n",
-    "\n",
-    "# Iterating through every data in the sheet \"TertEduType\" and store it to data\n",
-    "ws = wb['TertEduType']\n",
-    "for row in ws.iter_rows(min_row=2, max_col=3):\n",
-    "    data[2][row[0].value] = [row[1].value , row[2].value]\n",
-    "    \n",
-    "# Iterating through every data in the sheet \"TertEduProgram\" and store it to data\n",
-    "ws = wb['TertEduProgram']\n",
-    "for row in ws.iter_rows(min_row=2, max_col=4):\n",
-    "    data[3][row[0].value] = [row[1].value , row[2].value, row[3].value]\n",
-    "    \n",
-    "# Iterating through every data in the sheet \"LivingCostsByState\" and store it to data\n",
-    "ws = wb['LivingCostsByState']\n",
-    "for row in ws.iter_rows(min_row=2, max_col=6):\n",
-    "    data[4][row[0].value] = [row[1].value , row[2].value, row[3].value, row[4].value, row[5].value]\n",
-    "\n",
-    "# Iterating through every data in the sheet \"UniAssist\" and store it to data\n",
-    "ws = wb['UniAssist']\n",
-    "for row in ws.iter_rows(min_row=2, max_col=3):\n",
-    "    data[5][row[0].value] = [row[1].value , row[2].value]\n",
-    "\n",
-    "with open(\"Data.json\", \"w\") as json_file:\n",
-    "    json.dump(data, json_file, indent=4)"
+    "    return institution_loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Baden-Württemberg': [110.69, 350, 200, 0, 18.36], 'Bavaria': [110.69, 550, 200, 0, 18.36], 'Berlin': [110.69, 350, 150, 0, 18.36], 'Brandenburg': [110.69, 350, 150, 0, 18.36], 'Bremen': [110.69, 667, 330, 0, 18.36], 'Hamburg': [110.69, 500, 700, 0, 18.36], 'Hesse': [110.69, 345, 250, 0, 18.36], 'Lower Saxony': [110.69, 325, 250, 0, 18.36], 'Mecklenburg-Western Pomerania': [110.69, 360, 250, 0, 18.36], 'North Rhine-Westphalia': [110.69, 420, 400, 0, 18.36], 'Rhineland-Palatinate': [110.69, 300, 200, 0, 18.36], 'Saarland': [110.69, 350, 200, 0, 18.36], 'Saxony': [110.69, 370, 200, 0, 18.36], 'Saxony-Anhalt': [110.69, 290, 200, 0, 18.36], 'Schleswig-Holstein': [110.69, 320, 200, 0, 18.36], 'Thuringia': [110.69, 285, 200, 0, 18.36]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print({'Baden-Württemberg': [110.69, 350, 200, 0, 18.36], 'Bavaria': [110.69, 550, 200, 0, 18.36], 'Berlin': [110.69, 350, 150, 0, 18.36], 'Brandenburg': [110.69, 350, 150, 0, 18.36], 'Bremen': [110.69, 667, 330, 0, 18.36], 'Hamburg': [110.69, 500, 700, 0, 18.36], 'Hesse': [110.69, 345, 250, 0, 18.36], 'Lower Saxony': [110.69, 325, 250, 0, 18.36], 'Mecklenburg-Western Pomerania': [110.69, 360, 250, 0, 18.36], 'North Rhine-Westphalia': [110.69, 420, 400, 0, 18.36], 'Rhineland-Palatinate': [110.69, 300, 200, 0, 18.36], 'Saarland': [110.69, 350, 200, 0, 18.36], 'Saxony': [110.69, 370, 200, 0, 18.36], 'Saxony-Anhalt': [110.69, 290, 200, 0, 18.36], 'Schleswig-Holstein': [110.69, 320, 200, 0, 18.36], 'Thuringia': [110.69, 285, 200, 0, 18.36]})\n",
+    "\n"
    ]
   },
   {
