--- a/Mid-Term.ipynb
+++ b/Mid-Term.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -38,7 +38,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Baden-Württemberg', 'Bavaria', 'Berlin', 'Brandenburg', 'Bremen', 'Hamburg', 'Hesse', 'Lower Saxony', 'Mecklenburg-Western Pomerania', 'North Rhine-Westphalia', 'Rhineland-Palatinate', 'Saarland', 'Saxony', 'Saxony-Anhalt', 'Schleswig-Holstein', 'Thuringia']\n"
+      "Do you have any location preference? (Choose one number)\n",
+      "1 Baden-Württemberg\n",
+      "2 Bavaria\n",
+      "3 Berlin\n",
+      "4 Brandenburg\n",
+      "5 Bremen\n",
+      "6 Hamburg\n",
+      "7 Hesse\n",
+      "8 Lower Saxony\n",
+      "9 Mecklenburg-Western Pomerania\n",
+      "10 North Rhine-Westphalia\n",
+      "11 Rhineland-Palatinate\n",
+      "12 Saarland\n",
+      "13 Saxony\n",
+      "14 Saxony-Anhalt\n",
+      "15 Schleswig-Holstein\n",
+      "16 Thuringia\n",
+      "Your input: 1\n",
+      "Baden-Württemberg\n"
      ]
     }
    ],
@@ -55,7 +73,6 @@
     "#-----------------------------------------\n",
     "import json\n",
     "from openpyxl import load_workbook\n",
-    "from tabulate import tabulate\n",
     "\n",
     "\n",
     "######################\n",
@@ -166,32 +183,27 @@
     "# Ask for user input for the institution location\n",
     "#------------------------------------------------\n",
     "def location_bundesland():\n",
-    "    bundesland_list = list(json_loader(4).keys())\n",
+    "    bundesland_name = list(json_loader(4).keys())\n",
+    "    bundesland_name = {name: num for name, num in enumerate(bundesland_name, start=1)}\n",
+    "    \n",
     "    while True:\n",
-    "        institution_loc = input (\"Do you have any location preference? \")\n",
-    "        if institution_loc in bundesland_list:\n",
+    "        print(\"Do you have any location preference? (Choose one number)\")\n",
+    "        for num, name in bundesland_name.items():\n",
+    "            print(num, name)\n",
+    "        institution_loc = int(input(\"Your input: \"))\n",
+    "        if 0 <= institution_loc < len(bundesland_name)+1:\n",
     "            break\n",
     "        print(\"Your input is incorrect, please try again.\")\n",
-    "    if institution_loc == \"A\":\n",
-    "        institution_loc = \"Universitäten\"\n",
-    "    elif institution_loc == \"B\": \n",
-    "        institution_loc = \"Fachhochschulen\"\n",
-    "    return institution_loc"
+    "    \n",
+    "    institution_loc = bundesland_name[institution_loc]\n",
+    "    return institution_loc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Baden-Württemberg': [110.69, 350, 200, 0, 18.36], 'Bavaria': [110.69, 550, 200, 0, 18.36], 'Berlin': [110.69, 350, 150, 0, 18.36], 'Brandenburg': [110.69, 350, 150, 0, 18.36], 'Bremen': [110.69, 667, 330, 0, 18.36], 'Hamburg': [110.69, 500, 700, 0, 18.36], 'Hesse': [110.69, 345, 250, 0, 18.36], 'Lower Saxony': [110.69, 325, 250, 0, 18.36], 'Mecklenburg-Western Pomerania': [110.69, 360, 250, 0, 18.36], 'North Rhine-Westphalia': [110.69, 420, 400, 0, 18.36], 'Rhineland-Palatinate': [110.69, 300, 200, 0, 18.36], 'Saarland': [110.69, 350, 200, 0, 18.36], 'Saxony': [110.69, 370, 200, 0, 18.36], 'Saxony-Anhalt': [110.69, 290, 200, 0, 18.36], 'Schleswig-Holstein': [110.69, 320, 200, 0, 18.36], 'Thuringia': [110.69, 285, 200, 0, 18.36]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print({'Baden-Württemberg': [110.69, 350, 200, 0, 18.36], 'Bavaria': [110.69, 550, 200, 0, 18.36], 'Berlin': [110.69, 350, 150, 0, 18.36], 'Brandenburg': [110.69, 350, 150, 0, 18.36], 'Bremen': [110.69, 667, 330, 0, 18.36], 'Hamburg': [110.69, 500, 700, 0, 18.36], 'Hesse': [110.69, 345, 250, 0, 18.36], 'Lower Saxony': [110.69, 325, 250, 0, 18.36], 'Mecklenburg-Western Pomerania': [110.69, 360, 250, 0, 18.36], 'North Rhine-Westphalia': [110.69, 420, 400, 0, 18.36], 'Rhineland-Palatinate': [110.69, 300, 200, 0, 18.36], 'Saarland': [110.69, 350, 200, 0, 18.36], 'Saxony': [110.69, 370, 200, 0, 18.36], 'Saxony-Anhalt': [110.69, 290, 200, 0, 18.36], 'Schleswig-Holstein': [110.69, 320, 200, 0, 18.36], 'Thuringia': [110.69, 285, 200, 0, 18.36]})\n",
     "\n"
