--- a/Mid-Term.ipynb
+++ b/Mid-Term.ipynb
@@ -1,107 +1,97 @@
-{
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Mid-term Script\n",
-    "**Searching for the right university in Germany**<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Function\n",
-    "**This script will show you the selection of university in Germany based on your criteria selection.**\n",
-    "<br>\n",
-    "*The content is subject to completeness of the database at the moment you run this program.<br>\n",
-    "Information provided here subject to future updates on the database.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Welcome future students!\n",
-    "Below you could search some information regarding the university in Germany."
-   ]
+
+Skip to content
+Pull requests
+Issues
+Marketplace
+Explore
+@ShieldCarrot
+ShieldCarrot /
+Mid-Term-Project
+Public
+
+1
+0
+
+    0
+
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+
+    Settings
+
+Update Mid-Term.ipynb
+
+    main 
+
+@ShieldCarrot
+ShieldCarrot committed 28 minutes ago
+1 parent 0d5d3f0 commit 18996a62eb0e7ddb11927ba4739e51c0805ee3e6
+Showing
+with 20 additions and 35 deletions.
+55 Mid-Term.ipynb
+@@ -29,37 +29,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
    "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you have any location preference? (Choose one number)\n",
+      "1 Baden-Württemberg\n",
+      "2 Bavaria\n",
+      "3 Berlin\n",
+      "4 Brandenburg\n",
+      "5 Bremen\n",
+      "6 Hamburg\n",
+      "7 Hesse\n",
+      "8 Lower Saxony\n",
+      "9 Mecklenburg-Western Pomerania\n",
+      "10 North Rhine-Westphalia\n",
+      "11 Rhineland-Palatinate\n",
+      "12 Saarland\n",
+      "13 Saxony\n",
+      "14 Saxony-Anhalt\n",
+      "15 Schleswig-Holstein\n",
+      "16 Thuringia\n",
+      "Your input: 1\n",
+      "Baden-Württemberg\n"
+     ]
+    }
+   ],
    "outputs": [],
    "source": [
     "########################################\n",
     "## Created on Tue Nov 30 23:40:54 2021##\n",
-    "##                                    ## \n",
-    "## @author: Rinaldo                   ## \n",
-    "########################################\n",
-    "\n",
-    "# MODULES INITIALIZATION\n",
-    "# Using Excel table to define the database\n",
-    "# Using JSON to save the credentials data\n",
-    "#-----------------------------------------\n",
-    "import json\n",
-    "from openpyxl import load_workbook\n",
-    "\n",
-    "\n",
-    "######################\n",
-    "## Function Section ##\n",
-    "######################\n",
-    "\n",
-    "\n",
-    "# Json loader\n",
-    "# Load specific key from the stored json data\n",
-    "# Data structure can be seen on the excel file or the relationship-table picture\n",
-    "#-------------------------------------------------------------------------------\n",
-    "def json_loader(target_key, target_file = 'Data.json'):\n",
-    "    \n",
-    "    with open(target_file, 'r') as json_object:\n",
-    "        data_requested = json.loads(json_object.read())[str(target_key)]\n",
-    "    return data_requested\n",
-    "\n",
-    "\n",
-    "# Ask user whether there is a data change(s) and wanted to update the database\n",
-    "#-----------------------------------------------------------------------------\n",
-    "def json_updater():\n",
-    "    target_file = 'Mid-Term Data.xlsx'\n",
-    "    wb = load_workbook(target_file)\n",
-    "\n",
-    "    data = {\n",
+@@ -101,8 +75,9 @@
     "        1: {}, # for 'TertEduList'\n",
     "        2: {}, # for 'TertEduType'\n",
     "        3: {}, # for 'TertEduProgram'\n",
+    "        4: {}, # for 'LivingCostsByState'\n",
+    "        5: {}  # for 'UniAssist'\n",
     "        4: {}, # for 'TertEduCosts'\n",
     "        5: {}, # for 'LivingCostsByState'\n",
     "        6: {}  # for 'UniAssist'\n",
     "    }\n",
     "\n",
     "    ##----------------------------------------------------------------------------------------\n",
-    "    ## TO-DO: create a simple checker to ensure the header of the input are all correct\n",
-    "    ##      : simplify the append functions below after the checker has been created with loop\n",
-    "    ##      : take account of column changes in the future when implementing loop function\n",
-    "    ##----------------------------------------------------------------------------------------\n",
-    "    ## Slicing explicitly through the target file to ensure data integrity\n",
-    "    ## Iterating through every data in the sheet \"TertEduList\" and store it to json file\n",
-    "    ## This is return in void function\n",
-    "    ##----------------------------------------------------------------------------------------\n",
-    "\n",
-    "    ws = wb['TertEduList']\n",
-    "    for row in ws.iter_rows(min_row=2, max_col=3):\n",
-    "        data[1][row[0].value] = [row[1].value , row[2].value]\n",
-    "\n",
-    "    # Iterating through every data in the sheet \"TertEduType\" and store it to data\n",
-    "    ws = wb['TertEduType']\n",
-    "    for row in ws.iter_rows(min_row=2, max_col=3):\n",
-    "        data[2][row[0].value] = [row[1].value , row[2].value]\n",
-    "\n",
+@@ -127,17 +102,25 @@
     "    # Iterating through every data in the sheet \"TertEduProgram\" and store it to data\n",
     "    ws = wb['TertEduProgram']\n",
     "    for row in ws.iter_rows(min_row=2, max_col=4):\n",
+    "        data[3][row[0].value] = [row[1].value , row[2].value, row[3].value]\n",
     "        if data[3].get(row[0].value) == None:\n",
     "            data[3][row[0].value] = [[row[1].value , row[2].value, row[3].value]]\n",
     "        else:\n",
@@ -115,69 +105,30 @@
     "    # Iterating through every data in the sheet \"LivingCostsByState\" and store it to data\n",
     "    ws = wb['LivingCostsByState']\n",
     "    for row in ws.iter_rows(min_row=2, max_col=6):\n",
+    "        data[4][row[0].value] = [row[1].value , row[2].value, row[3].value, row[4].value, row[5].value]\n",
     "        data[5][row[0].value] = [row[1].value , row[2].value, row[3].value, row[4].value, row[5].value]\n",
     "\n",
     "    # Iterating through every data in the sheet \"UniAssist\" and store it to data\n",
     "    ws = wb['UniAssist']\n",
     "    for row in ws.iter_rows(min_row=2, max_col=3):\n",
+    "        data[5][row[0].value] = [row[1].value , row[2].value]\n",
     "        data[6][row[0].value] = [row[1].value , row[2].value]\n",
     "    \n",
     "    # Dump the compiled file\n",
     "    with open(\"Data.json\", \"w\") as json_file:\n",
-    "        json.dump(data, json_file, indent=4)\n",
-    "        \n",
-    "\n",
-    "# Create user ID for user to store and retrieve their previous search\n",
-    "# ID is based on the combination of first letter of full name, place of birth, and pin\n",
-    "#-------------------------------------------------------------------------------------\n",
-    "def create_credentials():\n",
-    "    name = input(\"Full name: \").split()\n",
-    "    POB  = str(input(\"Place of birth: \"))\n",
-    "    pin  = str((input(\"Your four (3) pin numbers: \")))\n",
-    "\n",
-    "    id_comp_1 = ''.join(word[0] for word in name)\n",
-    "    id_comp_2 = POB[0::2]\n",
-    "    id_comp_3 = pin\n",
-    "    user_id   = (id_comp_1 + id_comp_2 + id_comp_3).upper()\n",
-    "    \n",
-    "    return user_id\n",
-    "\n",
-    "\n",
-    "#--------------------------------------------------------------------------------------------\n",
-    "# TO-DO: Scalability for the input selection\n",
-    "#      : In case of increasing number of choices from table TertEduType column-C unique value\n",
-    "#--------------------------------------------------------------------------------------------\n",
-    "# Ask for user input for the tertiary education type\n",
-    "#---------------------------------------------------\n",
-    "def tertiary_type():\n",
-    "    while True:\n",
-    "        tertiary_edu_type = input (\"Which university type are you looking for: A) Universitäten. B) Fachhochschulen. [A/B]? \")\n",
-    "        if tertiary_edu_type in ['A', 'B']:\n",
-    "            break\n",
-    "        print(\"Your input is incorrect, please try again.\")\n",
-    "    if tertiary_edu_type == \"A\": \n",
-    "        tertiary_edu_type = \"Universitäten\"\n",
-    "    elif tertiary_edu_type == \"B\": \n",
-    "        tertiary_edu_type = \"Fachhochschulen\"\n",
+@@ -179,7 +162,6 @@
     "    return tertiary_edu_type\n",
+    "\n",
     "\n",
     "\n",
     "# Ask for user input for the institution location\n",
     "#------------------------------------------------\n",
     "def location_bundesland():\n",
-    "    bundesland_name = list(json_loader(4).keys())\n",
-    "    bundesland_name = {name: num for name, num in enumerate(bundesland_name, start=1)}\n",
-    "    \n",
-    "    while True:\n",
-    "        print(\"Do you have any location preference? (Choose one number)\")\n",
-    "        for num, name in bundesland_name.items():\n",
-    "            print(num, name)\n",
-    "        institution_loc = int(input(\"Your input: \"))\n",
-    "        if 0 <= institution_loc < len(bundesland_name)+1:\n",
-    "            break\n",
+@@ -196,7 +178,10 @@
     "        print(\"Your input is incorrect, please try again.\")\n",
     "    \n",
     "    institution_loc = bundesland_name[institution_loc]\n",
+    "    return institution_loc\n"
     "    return institution_loc\n",
     "\n",
     "\n",
@@ -185,42 +136,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print({'Baden-Württemberg': [110.69, 350, 200, 0, 18.36], 'Bavaria': [110.69, 550, 200, 0, 18.36], 'Berlin': [110.69, 350, 150, 0, 18.36], 'Brandenburg': [110.69, 350, 150, 0, 18.36], 'Bremen': [110.69, 667, 330, 0, 18.36], 'Hamburg': [110.69, 500, 700, 0, 18.36], 'Hesse': [110.69, 345, 250, 0, 18.36], 'Lower Saxony': [110.69, 325, 250, 0, 18.36], 'Mecklenburg-Western Pomerania': [110.69, 360, 250, 0, 18.36], 'North Rhine-Westphalia': [110.69, 420, 400, 0, 18.36], 'Rhineland-Palatinate': [110.69, 300, 200, 0, 18.36], 'Saarland': [110.69, 350, 200, 0, 18.36], 'Saxony': [110.69, 370, 200, 0, 18.36], 'Saxony-Anhalt': [110.69, 290, 200, 0, 18.36], 'Schleswig-Holstein': [110.69, 320, 200, 0, 18.36], 'Thuringia': [110.69, 285, 200, 0, 18.36]})\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
-}
+0 comments on commit 18996a6
+@ShieldCarrot
+Attach files by dragging & dropping, selecting or pasting them.
+
+You’re receiving notifications because you’re watching this repository.
+
+    © 2021 GitHub, Inc.
+
+    Terms
+    Privacy
+    Security
+    Status
+    Docs
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
+
+Loading complete
